--- a/about.html
+++ b/about.html
@@ -12,9 +12,10 @@
 <body>
     <div>
         <ul style="top:5px;">
-        <li style="border-radius: 5px 0 0 5px;"><a  class="dock">卡尔斯厄-资源站</a></li>
-        <li><a href="index.html" class="dock">首页</a></li>
-        <li style="border-radius: 0 5px 5px 0;"><a href="" class="dock">关于</a></li>
+        <li style="border-radius: 5px 0 0 5px;"><a href="index.html" class="dock">首页</a></li>
+        <li><a href="" class="dock">关于</a></li>
+        <li style="border-radius: 0 5px 5px 0;"><a href="http://kaersie.great-site.net/" class="dock">反馈</a></li>
+
         </ul>
     </div>  
     <br><br><br><br>
