--- a/about.html
+++ b/about.html
@@ -31,5 +31,5 @@
 </button>
 </body>
 <header>
-    <p id="banquan">copyright 2024 卡尔斯厄 保留所有权利</p>
+    <p id="banquan">Copyright 2024 卡尔斯厄 保留所有权利</p>
 </header>
