--- a/index.html
+++ b/index.html
@@ -30,11 +30,16 @@
 
     </div><br><br><br>
 <button id="redtext" class="redbutton">
-        <p  style="text-align:center;color: white;font-size: 30px;" >{{title}}</p>
-<p  style="text-align:right;color: white;font-size: 12px;" >{{times}}</p>
+        <p  style="text-align:center;color: white;font-size: 30px;" >客户端正式上线，点击下方下载</p>
+<p  style="text-align:right;color: white;font-size: 12px;" >2024.1.24</p>
     </button><br><br><br><br><br><br>
 
 <div class="payit" id="pay">
+    
+
+
+    <a href="https://grasp.lanzout.com/b03fenane"><button type="submit" class="linkbutton" ><p class="lbh1">NEW：卡尔斯厄-资源站 客户端（密码:1234）</p></button></a> <br>
+
     <a href="pages/chinese.html"><button type="submit" class="linkbutton" ><p class="lbh1">语文-学习资源推荐</p></button></a> <br>
     <a href="pages/math.html"><button type="submit" class="linkbutton" ><p class="lbh1">数学-学习资源推荐</p></button></a> <br>
     <a href="pages/eng.html"><button type="submit" class="linkbutton" ><p class="lbh1">英语-学习资源推荐</p></button></a> <br>
@@ -43,18 +48,7 @@
     <div><div id="rcneed"></div></div>
 </div>
 <script src="./other/main.js"></script>
-<script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
-<script>
-    const vs=new Vue({
-        el:'#redtext',
-        data(){
-            return{
-            title:'本网站资源已更新',
-            times:'2024.1.24'
-            }
-        }
-    })
-</script>
+
 </body>
 <footer>
     <p id="banquan">Copyright 2024 卡尔斯厄 保留所有权利</p>
