--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul style="top:5px;">
             <li style="border-radius: 5px 0 0 5px;"><a href="index.html" class="dock">首页</a></li>
             <li><a href="about.html" class="dock">关于</a></li>
-            <li style="border-radius: 0 5px 5px 0;"><a href="http://kaersie.great-site.net/" class="dock">反馈</a></li>
+            <li style="border-radius: 0 5px 5px 0;"><a href="http://kaersie.great-site.net/" class="dock">反馈&建议</a></li>
     
             </ul>
     </div>  
@@ -38,8 +38,8 @@
     
 
 
-    <a href="https://grasp.lanzout.com/b03fenane"><button type="submit" class="linkbutton" ><p class="lbh1">NEW：卡尔斯厄-资源站 客户端（密码:1234）</p></button></a> <br>
-
+    <a href="https://grasp.lanzout.com/b03fenane"><button type="submit" class="linkbutton" ><p class="lbh2" style="color:#a52a2a">NEW：卡尔斯厄-资源站客户端（密码:1234）</p></button></a> <br>
+    <a href="https://grasp.lanzout.com/b03fenane"><button type="submit" class="linkbutton" ><p class="lbh2" style="color:#a52a2a">网站怎么样？给我们提一些建议吧</p></button></a> <br>
     <a href="pages/chinese.html"><button type="submit" class="linkbutton" ><p class="lbh1">语文-学习资源推荐</p></button></a> <br>
     <a href="pages/math.html"><button type="submit" class="linkbutton" ><p class="lbh1">数学-学习资源推荐</p></button></a> <br>
     <a href="pages/eng.html"><button type="submit" class="linkbutton" ><p class="lbh1">英语-学习资源推荐</p></button></a> <br>
