--- a/pages/other.html
+++ b/pages/other.html
@@ -15,7 +15,7 @@
         <ul style="top:5px;">
             <li style="border-radius: 5px 0 0 5px;"><a href="..\index.html" class="dock">首页</a></li>
             <li><a href="..\about.html" class="dock">关于</a></li>
-            <li style="border-radius: 0 5px 5px 0;"><a href="http://kaersie.great-site.net/" class="dock">反馈</a></li>
+            <li style="border-radius: 0 5px 5px 0;"><a href="http://kaersie.great-site.net/" class="dock">反馈&建议</a></li>
     
             </ul>
     </div>  
