--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
     <a href="https://grasp.lanzout.com/b03fenane"><button type="submit" class="linkbutton" ><p class="lbh2" style="color:#a52a2a">NEW：卡尔斯厄-资源站客户端（密码:1234）</p></button></a> <br>
-    <a href="https://grasp.lanzout.com/b03fenane"><button type="submit" class="linkbutton" ><p class="lbh2" style="color:#a52a2a">网站怎么样？给我们提一些建议吧</p></button></a> <br>
+    <a href="http://kaersie.great-site.net/"><button type="submit" class="linkbutton" ><p class="lbh2" style="color:#a52a2a">网站怎么样？给我们提一些建议吧</p></button></a> <br>
     <a href="pages/chinese.html"><button type="submit" class="linkbutton" ><p class="lbh1">语文-学习资源推荐</p></button></a> <br>
     <a href="pages/math.html"><button type="submit" class="linkbutton" ><p class="lbh1">数学-学习资源推荐</p></button></a> <br>
     <a href="pages/eng.html"><button type="submit" class="linkbutton" ><p class="lbh1">英语-学习资源推荐</p></button></a> <br>
